--- a/notebook/prediction.ipynb
+++ b/notebook/prediction.ipynb
@@ -228,6 +228,91 @@
     "model.compile(optimizer='adam',loss='mean_squared_error')\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m3305/3305\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m611s\u001b[0m 179ms/step - loss: 0.0013\n",
+      "Epoch 2/10\n",
+      "\u001b[1m3305/3305\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m788s\u001b[0m 239ms/step - loss: 2.9422e-04\n",
+      "Epoch 3/10\n",
+      "\u001b[1m3305/3305\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m803s\u001b[0m 243ms/step - loss: 2.2006e-04\n",
+      "Epoch 4/10\n",
+      "\u001b[1m3305/3305\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m710s\u001b[0m 214ms/step - loss: 1.6263e-04\n",
+      "Epoch 5/10\n",
+      "\u001b[1m 818/3305\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m12:33\u001b[0m 303ms/step - loss: 1.1651e-04"
+     ]
+    }
+   ],
+   "source": [
+    "#model fitting\n",
+    "model.fit(x_train,y_train, batch_size=1, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pridictions=model.predict(x_test)\n",
+    "inv_pridictions=scaler.inverse_transform(pridictions)\n",
+    "inv_y_test=scaler.inverse_transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotting_data = pd.DataFrame(\n",
+    "    {\n",
+    "    'Original' :inv_y_test.flatten(),\n",
+    "    ' Prediction':inv_predictions.flatten(),\n",
+    "    },index= closing_price.index[train_size + base_days:]\n",
+    ")\n",
+    "plt.figure(figsize= (15, 6))\n",
+    "plt.plot(plotting_data.index, ['Original' ] ,label= 'Original', color= 'blue', linewidth= 2)\n",
+    "plt.plot(plotting_data.index, ['Prediction'], label= 'Prediction', color= 'red', linewidth= 2)\n",
+    "plt.title(\"Prediction vs Actual Close Price\",fontsize= 14)\n",
+    "plt.ylabel( 'close Price', fontsize= 14)\n",
+    "plt.xlabel('Year', fontsize= 14)\n",
+    "plt.grid(alpha= 0.3)\n",
+    "plt.legend(fontsize= 14)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#price prediction for next day\n",
+    "last_100= scaled_data[-100:].reshape(1,100,1)\n",
+    "future_predictions=[]\n",
+    "for _ in range(10):\n",
+    "    next_days=model.predict(last_100)\n",
+    "    future_predictions.append(scaler.inverse_transform(next_days))\n",
+    "    last_100=np.append(last_100[:,1:,:],next_days.reshape(1,1,-1),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "future_predictions=np.array(future_predictions).flaten()"
+   ]
   }
  ],
  "metadata": {
